Fix comment jumping off viewport when post has unsized images

--- a/frontend/src/Components/PostComponent.module.scss
+++ b/frontend/src/Components/PostComponent.module.scss
@@ -1,5 +1,6 @@
 .post {
     margin-bottom: 64px;
+    overflow-anchor: none;
 }
 
 .title, .title a {
